# YouTubeDroid

./: README.md  database.db  database.txt  main.py  pyproject.toml
src/: misc.py  youtube.py
